added lists to section Vzdělání, fixed display of pictures in gallery

--- a/index.html
+++ b/index.html
@@ -52,14 +52,26 @@
 
 <section class="vzdelani" id="vzdelani">
     <h2>Vzdělání</h2>
-    <h3><a href="https://www.czu.cz/cs"  target="_blank">Česká zemědělská univerzita v Praze</a>, Fakulta agrobiologie, potravinových a přírodních zdrojů, Bc.</h3>
+    <h3><a href="https://www.czu.cz/cs"  target="_blank">Česká zemědělská univerzita v Praze</a> | Fakulta agrobiologie, potravinových a přírodních zdrojů, Bc.</h3>
     <p class="rok">2018 — 2021</p>
-    <p>Ukončeno státní závěrečnou zkouškou z předmětů: základy geologie, pedologie, meteorologie a klimatologie, základy mikrobiologie, chov zvířat a prostředí, pěstování rostlin a prostředí, základy sadovnictví a krajinářství, odpady a jejich využití</p>   
-    <p>BP na téma Obsah léčiv v odpadních vodách (se zaměřením na antibiotika)</p>
+    <ul>
+        <li>Obor Ochrana krajiny a využívání přírodních zdrojů </li>
+        <li>Ukončeno státní závěrečnou zkouškou z předmětů: základy geologie, pedologie, meteorologie a klimatologie, základy mikrobiologie, chov zvířat a prostředí, pěstování rostlin a prostředí, základy sadovnictví a krajinářství, odpady a jejich využití</li>
+        <li>Bakalářská práce na téma Obsah léčiv v odpadních vodách se zaměřením na antibiotika</li>   
+    </ul>
+
+    <h3><a href="https://www.upol.cz/"  target="_blank">Univerzita Palackého v Olomouci</a> | Přírodovědecká fakulta</h3>
+    <p class="rok">2014 — 2017</p>
+    <ul>
+        <li>Obor Systematická biologie a ekologie </li>
+        <li>Bakalářská práce na téma Říční bariéry u obojživelníků a plazů</li>
+    </ul>
 
     <h3><a href="https://www.gymzl.cz/"  target="_blank">Gymnázium Zlín - Lesní čtvrť</a></h3>
     <p class="rok">2010 — 2014</p>
-    <p>Ukončeno maturitní zkouškou z chemie, biologie a anglického jazyka</p>
+    <ul>
+        <li>Ukončeno maturitní zkouškou z chemie, biologie a anglického jazyka</li>
+    </ul>
 </section>
 
 
@@ -67,20 +79,23 @@
 
 <section class="zkusenosti" id="zkusenosti">
     <h2>Pracovní zkušenosti</h2>
-    <h3>Instruktor, Lanové centrum PROUD, Olomouc</h3>
-    <p class="rok">2014 — 2017</p>
+        <h3>Software tester | studio beecode, Olomouc</h3>
+        <p class="rok">od ledna 2022 až do současnosti</p>
 
-    <h3>Laborant v molekulárně-genetické laboratoři, Ústav biologie AV ČR, Studenec</h3>
-    <p class="rok">2015 — 2017</p>
+        <h3>Pěstební péče o zeleň | DUKATT, Tečovice</h3>
+        <p class="rok">2021</p>
 
-    <h3>Sanitář, Ústřední vojenská nemocnice Praha</h3>
-    <p class="rok">2018 — 2020</p>
+        <h3>Odborná zemědělská praxe se zaměřením na pěstování révy vinné | Vinařství DUKATT</h3>
+        <p class="rok">2020 — 2021</p>
 
-    <h3>Odborná zemědělská praxe se zaměřením na pěstování révy vinné, Vinařství DUKATT</h3>
-    <p class="rok">2020 — 2021</p>
+        <h3>Sanitář | Ústřední vojenská nemocnice Praha</h3>
+        <p class="rok">2018 — 2020</p>
 
-    <h3>Pěstební péče o zeleň, DUKATT, Tečovice</h3>
-    <p class="rok">2021</p>
+        <h3>Laborant v molekulárně-genetické laboratoři | Ústav biologie AV ČR, Studenec</h3>
+        <p class="rok">2015 — 2017</p>
+
+        <h3>Instruktor | Lanové centrum PROUD, Olomouc</h3>
+        <p class="rok">2014 — 2017</p>
 </section>
 
 
@@ -88,10 +103,10 @@
 
 <section class="kurzy" id="kurzy">
     <h2>Kurzy</h2>
-    <h3>Intensive language course of academic and specialized English B2, <br>Česká zemědělská univerzita v Praze</h3>
+    <h3>Intensive language course of academic and specialized English B2 | <br>Česká zemědělská univerzita v Praze</h3>
     <p class="rok">2019</p>
 
-    <h3>Digitální akademie: Testování</h3>
+    <h3>Digitální akademie: Testování  | Czechitas, Brno</h3>
     <p class="rok">Jaro 2022</p>
 </section>
 
@@ -181,7 +196,7 @@
     <img src="pictures/pic8.jpg" alt="street buildings">
     <img src="pictures/pic9.jpg" alt="cathedral">
     <img src="pictures/pic10.jpg" alt="street art">
-    <img src="pictures/picx.jpg" alt="palace">
+    <img src="pictures/pic11.jpg" alt="palace">
     <img src="pictures/pic12.jpg" alt="man waking down the street">
 </section>
 
