deleted section Jazyky, added external links, edited texts

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
      <li><a href="#zkusenosti">Zkušenosti</a></li>
      <li><a href="#kurzy">Kurzy</a></li>
      <li><a href="#dovednosti">Dovednosti</a></li>
-     <li><a href="#jazyky">Jazyky</a></li>
     <li><a href="#zaliby">Záliby</a></li>
      <li><a href="#galerie">Galerie</a></li>
  </ul>
@@ -56,7 +55,6 @@
     <p class="rok">2018 — 2021</p>
     <ul>
         <li>Obor Ochrana krajiny a využívání přírodních zdrojů </li>
-        <li>Ukončeno státní závěrečnou zkouškou z předmětů: základy geologie, pedologie, meteorologie a klimatologie, základy mikrobiologie, chov zvířat a prostředí, pěstování rostlin a prostředí, základy sadovnictví a krajinářství, odpady a jejich využití</li>
         <li>Bakalářská práce na téma Obsah léčiv v odpadních vodách se zaměřením na antibiotika</li>   
     </ul>
 
@@ -79,8 +77,12 @@
 
 <section class="zkusenosti" id="zkusenosti">
     <h2>Pracovní zkušenosti</h2>
-        <h3>Software tester | studio beecode, Olomouc</h3>
+    <h3>Software tester | <a href="https://www.beecode.io/"  target="_blank">studio beecode</a>, Olomouc</h3>
         <p class="rok">od ledna 2022 až do současnosti</p>
+        <ul>
+            <li><a href="https://www.unizone.cz/" target="_blank">Unizone – mobilní aplikace pro české vysoké školy</a></li>
+            <li> <a href="https://www.nocvedcu.cz/" target="_blank">Noc vědců – festival popularizace vědy</a></li>
+        </ul>
 
         <h3>Pěstební péče o zeleň | DUKATT, Tečovice</h3>
         <p class="rok">2021</p>
@@ -88,13 +90,13 @@
         <h3>Odborná zemědělská praxe se zaměřením na pěstování révy vinné | Vinařství DUKATT</h3>
         <p class="rok">2020 — 2021</p>
 
-        <h3>Sanitář | Ústřední vojenská nemocnice Praha</h3>
+        <h3>Sanitář | <a href="https://www.uvn.cz/cs/oddeleni-gastroenterologie-hepatologie-a-metabolismu" target="_blank">Ústřední vojenská nemocnice Praha</a></h3>
         <p class="rok">2018 — 2020</p>
 
-        <h3>Laborant v molekulárně-genetické laboratoři | Ústav biologie AV ČR, Studenec</h3>
+        <h3>Laborant v molekulárně-genetické laboratoři | <a href="https://www.ivb.cz/" target="_blank">Ústav biologie obratlovců AV ČR</a></h3>
         <p class="rok">2015 — 2017</p>
 
-        <h3>Instruktor | Lanové centrum PROUD, Olomouc</h3>
+        <h3>Instruktor | <a href="https://www.lanovecentrum.cz/cs/" target="_blank">Lanové centrum PROUD, Olomouc</a></h3>
         <p class="rok">2014 — 2017</p>
 </section>
 
@@ -156,20 +158,6 @@
         </div>
         </section>
 
-
-<!--Jazyky-->
-
-<section class="jazyky" id="jazyky">
-    <h2>Jazyky</h2>
-    <ul>
-        <li>Agličtina</li>
-        <li>Němčina</li>
-        <li>Francouzština</li>
-        <li>Finština</li>
-    </ul>
-</section>
-
-
 <!--Záliby-->
 
 <section class="zaliby" id="zaliby">
@@ -201,7 +189,6 @@
 </section>
 
 <footer>
-    <h2>Najdete mě na:</h2>
     <div class="img-container">
         <a class="socials" href="https://www.linkedin.com/in/kristynadolezalova/" target="_blank"><img src="pictures/linkedin.png" alt="linkedin"></a>
 
